# thermoplot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  storage.py  testfile.py
config/: CO2.ini  R1234ze(E).ini
src/: configthermoplot.py  coolprop_interface.py  coolprop_interface_thermoplot.py  general_helpers.py  isolines.py  labelling.py  thermoplot.py  utils.py
utils/: configparser.py  general_helpers.py  logger.py
utils/fluid_properties/: README.txt  __init__.py  base_interface.py  coolprop_humidair_interface.py  coolprop_interface.py  feos_interface.py  fluid_functions.py  fluid_properties.py  fluidprop_interface.py  gc_functions.py  lut_interface.py  properties_profiles.py  setup.py  tespy_interface.py
utils/fluid_properties/coolprop/: coolprop_functions.py  ha_coolprop_functions.py
utils/fluid_properties/fluidprop/: FPPython.py
utils/fluid_properties/group_contribution_methods/: molecular_structure.py
utils/fluid_properties/ideal_gas/: ideal_gas_fluid.py
utils/fluid_properties/lookup_tables/: grids.py  lut.py
