[project]
name = "thermoplot"
version = "0.1.0"
description = "Package for returning thermodynamic diagram backgrounds on which one can plot thermodynamic processes of interest."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coolprop==7.2.0",
    "matplotlib==3.10.9",
    "numpy==2.2.1",
    "scipy==1.17.1",
]
